package com.copa.model;

/**
 * Estado do ciclo de vida de uma {@link Partida}.
 */
public enum StatusPartida {
    AGENDADA,
    ENCERRADA
}
